src/objects/FSTR__PCE_Step_Field_Dependency__c.object
<CustomObject>
    <customHelpPage>FSTR__PCEHelp</customHelpPage>
    <description>This object stores information about fields that can determine whether a step is created or not.</description>
    <fields>
        <fullName>FSTR__Child_Object_Name__c</fullName>
        <label>Child Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Child_Object_Relationship_Field__c</fullName>
        <description>Relationship field from the Child_Object_Name__c to either the Object_Name__c or the final object in the Parent_Relationship__c fields.</description>
        <label>Child Object Relationship Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Child_Parent_Relationship_1__c</fullName>
        <label>Child Parent Relationship 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Child_Parent_Relationship_2__c</fullName>
        <label>Child Parent Relationship 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Child_Parent_Relationship_3__c</fullName>
        <label>Child Parent Relationship 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__DataType__c</fullName>
        <inlineHelpText>Field to store the data type corresponding to field name</inlineHelpText>
        <label>DataType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Drill_Down_Count_Operator__c</fullName>
        <label>Drill Down Count Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>=</fullName>
                </value>
                <value>
                    <fullName>!=</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Drill_Down_Count__c</fullName>
        <label>Drill Down Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__Drill_Down_Operator__c</fullName>
        <label>Drill Down Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Field_Name__c</fullName>
        <inlineHelpText>Actual name of the field being evaluated.</inlineHelpText>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Field_Value__c</fullName>
        <inlineHelpText>Value that the field is evaluated against.</inlineHelpText>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Joining_Operator__c</fullName>
        <inlineHelpText>If there are multiple dependent field values this field indicates how this value is combined with the other values</inlineHelpText>
        <label>Joining Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Object_Name__c</fullName>
        <inlineHelpText>Name of the object that the field corresponds to.</inlineHelpText>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Operator__c</fullName>
        <inlineHelpText>Indicates how the Field is compared to the Field Value field.</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>=</fullName>
                </value>
                <value>
                    <fullName>!=</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Parent_Relationship_1__c</fullName>
        <label>Parent Relationship 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Parent_Relationship_2__c</fullName>
        <label>Parent Relationship 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Parent_Relationship_3__c</fullName>
        <label>Parent Relationship 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Related_List_Filter_Field_Name__c</fullName>
        <description>Contains the field name used to filter the related list (child objects).</description>
        <label>Related List Filter Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Step__c</fullName>
        <label>Step</label>
        <referenceTo>FSTR__PCE_Step__c</referenceTo>
        <relationshipLabel>Step Field Dependencies</relationshipLabel>
        <relationshipName>Step_Field_Dependencies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Step Creation Condition</label>
    <nameField>
        <displayFormat>SFD-{000000}</displayFormat>
        <label>Step Field Dependency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Step Creation Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>